2006-05-29 Mikhail Khodjaiants
	Bug 108472: Debug continues to fail.
	* DebugCoreMessages.properties
	* CDebugTarget.java
	* CoreModelMessages.properties

2006-05-26 Mikhail Khodjaiants
	Bug 137138: Common source containers get disposed.
	* CSourceLookupParticipant.java
	* CSourcePathComputerDelegate.java

2006-05-26 Mikhail Khodjaiants
	Bug 122010: Registers View is displayed even if supportsRegisters and 
	supportsRegisterModification are disabled.
	Fix for supportsRegisterModification.
	* CRegister.java

2006-05-19 Mikhail Khodjaiants
	Warning cleanup.
	* CBreakpointManager.java

2006-05-12 Mikhail Khodjaiants
	Bug 118274: Condition is not shown in the tooltip of conditional breakpoint.
	* CDebugUtils.java
	* DebugCoreMessages.properties
	* BreakpointMessages.properties
	* CAddressBreakpoint.java
	* CFunctionBreakpoint.java
	* CLineBreakpoint.java
	* CWatchpoint.java

2006-03-27 Mikhail Khodjaiants
	Moved the extraction of the stop symbol to the launch.
	* CDIDebugModel.java
	* CDebugTarget.java

2006-03-06 Mikhail Khodjaiants
	Fix for Bug 93777: Postmortem and Local launch need a default preference for selected debugger.
	* CDebugCorePlugin.java
	* ICDebugConstants.java

2006-02-27 Mikhail Khodjaiants
	All serializable objects should have a stable serialVersionUID.
	* CDIException.java

2006-02-27 Mikhail Khodjaiants
	The DirectorySourceContainer's UI now supports the subfolders searching option (see bug 89748).
	Removed CDirectorySourceContainer and related classes. 
	The CDirectorySourceContainerType is kept for migration purposes.
	- CDirectorySourceContainer.java
	* CDebugTarget.java
	* CDirectorySourceContainerType.java
	* CSourceLookupDirector.java
	* SourceUtils.java
	* plugin.properties
	* plugin.xml

2006-02-24 Mikhail Khodjaiants
	Fix for bugs 129152 (Keyboard shortcuts are gone in CDT CVS HEAD) 
	and 128844 (No prompt for Debug perspective on suspend).
	* CDebugTarget.java

2006-02-20 Mikhail Khodjaiants